tests/assembler/fail/test15.ial
type S
{
    field S s;
}
